# shakespeare

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md  SECURITY.md  adaptive-style-plan.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
Contracts/: training-event.v1.schema.json  training-event.v2.schema.json
Editor/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
Packaging/: AppIcon.icns  AppIcon.provenance.md  Info.plist
Service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
Service/database/: README.md
Service/database/migrations/: 001_initial.sql
Service/shakespeare_service/: __init__.py  app.py  auth.py  config.py  errors.py  middleware.py  migrate.py  models.py  postgres.py  repository.py
Service/tests/: test_api.py  test_config.py  test_contracts.py  test_postgres_integration.py
Trainer/: pyproject.toml
Trainer/shakespeare_train/: __init__.py  cli.py  dataset.py
Trainer/tests/: test_dataset.py
Website/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
docs/: ASSET_LICENSE_INVENTORY.md  MODEL_PROMPTS.md  PERSONALIZATION.md  PRODUCTION_READINESS.md  RELEASING.md  SERVICE_ARCHITECTURE.md
scripts/: api-key-store-evals.swift  assistant-link-policy-evals.swift  bundle-app.sh  canonical-document-evals.swift  chat-context-evals.swift  chat-search-policy-evals.swift  convert_havelock.py  convert_models.py  document-asset-evals.swift  release-state.mjs  (+33 more)
(+154 files in other folders)
