[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shakespeare-service"
version = "0.1.0"
description = "Tenant-isolated personalization control plane for Shakespeare"
requires-python = ">=3.11"
dependencies = [
  "asyncpg==0.31.0",
  "fastapi==0.128.8",
  "PyJWT[crypto]==2.13.0",
  "uvicorn[standard]==0.39.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.2",
  "ruff==0.15.22",
]

[project.scripts]
shakespeare-migrate = "shakespeare_service.migrate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shakespeare_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101", "B008", "UP017", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S107"]
