[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "shakespeare-personalization"
version = "0.1.0"
description = "Local dataset compiler and Tinker trainer for Shakespeare"
requires-python = ">=3.11"
dependencies = [
  "tinker>=0.23.0,<1",
  "tinker-cookbook[inkling]==0.5.2",
]

[project.scripts]
shakespeare-train = "shakespeare_train.cli:main"

[tool.setuptools]
packages = ["shakespeare_train"]
